# ti-omap3-sgx

./: Makefile  Makefile.am  README  configure.ac  ti-omap3-sgx-bin-1.4.268-armv7hl.tar.bz2
data/: powervr.in
data/etc/apt/preferences.d/: ti-omap3-sgx
data/pkgconfig/: glesv2.pc.in
debian/: changelog  control  copyright  rules  ti-omap3-sgx-r121.install  ti-omap3-sgx-r121.links  ti-omap3-sgx-r121.powervr.init  ti-omap3-sgx-r121.powervr.service  ti-omap3-sgx-r125.install  ti-omap3-sgx-r125.links  ti-omap3-sgx-r125.powervr.init  ti-omap3-sgx-r125.powervr.service  ti-omap3-sgx.install  ti-omap3-sgx.postinst  ti-omap3-sgx.powervr.init  ti-omap3-sgx.powervr.service  ti-omap3-sgx.preinst
usr/lib/arm-linux-gnueabihf/: libEGL.so.1  libGLESv1_CM.so.1  libGLESv2.so.2
usr/lib/arm-linux-gnueabihf/ti-omap3-sgx/: current
usr/sbin/: powervr.in  pvrsrvinit
